@@ -1,7 +1,7 @@
 /**   
  * License Agreement for OpenSearchServer
  *
- * Copyright (C) 2009-2010 Emmanuel Keller / Jaeksoft
+ * Copyright (C) 2009-2012 Emmanuel Keller / Jaeksoft
  * 
  * http://www.open-search-server.com
  * 
@@ -30,7 +30,6 @@ import com.jaeksoft.searchlib.SearchLibException;
 import com.jaeksoft.searchlib.analysis.ClassPropertyEnum;
 import com.jaeksoft.searchlib.analysis.FilterFactory;
 import com.jaeksoft.searchlib.analysis.synonym.SynonymMap;
-import com.jaeksoft.searchlib.analysis.synonym.SynonymQueue;
 import com.jaeksoft.searchlib.analysis.synonym.SynonymTokenFilter;
 
 public class SynonymFilter extends FilterFactory {
@@ -59,9 +58,7 @@ public class SynonymFilter extends FilterFactory {
 	public TokenStream create(TokenStream tokenStream) {
 		if (synonyms == null)
 			return tokenStream;
-		for (SynonymQueue queue : synonyms.getSynonymQueues())
-			tokenStream = new SynonymTokenFilter(tokenStream, queue);
-		return tokenStream;
+		return new SynonymTokenFilter(tokenStream, synonyms);
 	}
 
 }
