@@ -26,31 +26,17 @@ package com.jaeksoft.searchlib.analysis.shingle;
 
 import java.io.IOException;
 
-import org.apache.lucene.analysis.TokenFilter;
 import org.apache.lucene.analysis.TokenStream;
-import org.apache.lucene.analysis.tokenattributes.OffsetAttribute;
-import org.apache.lucene.analysis.tokenattributes.PositionIncrementAttribute;
-import org.apache.lucene.analysis.tokenattributes.TermAttribute;
-import org.apache.lucene.util.AttributeSource;
 
-public class ShingleTokenFilter extends TokenFilter {
+import com.jaeksoft.searchlib.analysis.filter.AbstractTermFilter;
 
-	private TermAttribute termAtt;
-
-	private AttributeSource.State current = null;
-
-	private PositionIncrementAttribute posIncrAtt = null;
-
-	private OffsetAttribute offsetAtt = null;
+public class ShingleTokenFilter extends AbstractTermFilter {
 
 	private ShingleQueue[] shingles;
 
 	public ShingleTokenFilter(TokenStream tokenStream, String tokenSeparator,
 			int minShingleSize, int maxShingleSize) {
 		super(tokenStream);
-		this.termAtt = (TermAttribute) addAttribute(TermAttribute.class);
-		this.posIncrAtt = (PositionIncrementAttribute) addAttribute(PositionIncrementAttribute.class);
-		this.offsetAtt = (OffsetAttribute) addAttribute(OffsetAttribute.class);
 		shingles = new ShingleQueue[maxShingleSize - minShingleSize + 1];
 		for (int i = 0; i < shingles.length; i++)
 			shingles[i] = new ShingleQueue(tokenSeparator, maxShingleSize - i);
@@ -63,19 +49,11 @@ public class ShingleTokenFilter extends TokenFilter {
 		return null;
 	}
 
-	private final boolean createToken(String term, int posInc, int startOff,
-			int endOff) {
-		restoreState(current);
-		termAtt.setTermBuffer(term);
-		posIncrAtt.setPositionIncrement(posInc);
-		offsetAtt.setOffset(startOff, endOff);
-		return true;
-	}
-
 	private final boolean createToken(ShingleQueue shingle) {
-		if (!createToken(shingle.getTerm(), shingle.getPositionIncrement(),
-				shingle.getStartOffset(), shingle.getEndOffset()))
+		if (shingle.getTerm() == null)
 			return false;
+		createToken(shingle.getTerm(), shingle.getPositionIncrement(),
+				shingle.getStartOffset(), shingle.getEndOffset());
 		shingle.pop();
 		return true;
 	}
