@@ -1,53 +1,0 @@
-/**   
- * License Agreement for OpenSearchServer
- *
- * Copyright (C) 2010 Emmanuel Keller / Jaeksoft
- * 
- * http://www.open-search-server.com
- * 
- * This file is part of OpenSearchServer.
- *
- * OpenSearchServer is free software: you can redistribute it and/or
- * modify it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- *  (at your option) any later version.
- *
- * OpenSearchServer is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License
- *  along with OpenSearchServer. 
- *  If not, see <http://www.gnu.org/licenses/>.
- **/
-
-package com.jaeksoft.searchlib.analysis.synonym;
-
-import com.jaeksoft.searchlib.util.ExpressionToken;
-
-public class SynonymToken extends ExpressionToken {
-
-	private int positionIncrement;
-	private int startOffset;
-	private int endOffset;
-
-	protected SynonymToken(String term, int posInc, int start, int end) {
-		super(term);
-		this.positionIncrement = posInc;
-		this.startOffset = start;
-		this.endOffset = end;
-	}
-
-	public final int getPositionIncrement() {
-		return positionIncrement;
-	}
-
-	public final int getStartOffset() {
-		return startOffset;
-	}
-
-	public final int getEndOffset() {
-		return endOffset;
-	}
-}
